0029747: Samples - Inspector tool - start DFBrowser inside FuncDemo qt sample

new Model->DFBrowser action to start Inspector tool with active DFBrowser plugin filled by the sample OCAF application.
To update content of the DFBrowser, use <F5> shortcut.