samples/qt/FuncDemo/src/mainwindow.h
@@ -70,6 +70,9 @@ private slots:
     void model2();
     void compute();
     void nbThreads();
+#ifdef HAVE_Inspector
+    void startDFBrowser();
+#endif
     void about();
 
 private:
@@ -87,6 +90,9 @@ private:
     QAction *model2Act;
     QAction *computeAct;
     QAction *nbThreadsAct;
+#ifdef HAVE_Inspector
+    QAction *dfBrowserAct;
+#endif
     QAction *exitAct;
     QAction *aboutAct;
 
